# UK_IEEE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
IEEE 2025/Brush/: brush.cpp
IEEE 2025/Psuedo Code/: PseudoRobotMain.ino  PsuedoFunctionsForStuff.ino  PsuedoMovement.ino
IEEE 2025/Sample Functions/: Basic Movement.ino  Hall Effect Sensor.ino  JoyStick_Test.ino  TOF_functions.ino
IEEE 2025/liam-working-changes/: Global.h  MovementFunctions.ino  SensorFunctions.ino  TimeOfFlightOfficial.ino  test.ino  test2.ino
IEEE 2025/lightsensor/: lightsensor.cpp  lightsensor.h
IEEE 2025/platformIO_source/: platformio.ini
IEEE 2025/postSEC2025/: DebugInfo.ino
IEEE 2025/postSEC2025/sec2025/: Functions.ino  Global_Int.h  MovementFunctions.ino  PsuedoFunctionsForStuff.ino  RobotMain.ino  SensorFunctions.ino
IEEE 2025/secMain2025/sec2025/: Functions.ino  MovementFunctions.ino  PsuedoFunctionsForStuff.ino  RobotMain.ino  SensorFunctions.ino  sec2025.ino
IEEE 2025/src/: Global_Int.h  MovementFunctions.ino  SensorFunctions.ino
IEEE2024/: CMakeLists.txt  Global_Int.h
IEEE2024/Functions/: Functions.ino
IEEE2024/IEEERobot2024/: IEEERobot2024.ino
IEEE2024/MovementFunctions/: MovementFunctions.ino
IEEE2024/Pixy2_Functions/: Pixy2_Functions.ino
IEEE2024/Robotic_Arm_Functions/: Robotic_Arm_Functions.ino
IEEE2024/SensorFunctions/: SensorFunctions.ino
IEEE2026/: README.md
IEEE2026/SEC/: README.md
IEEE2026/docs/: README.md
IEEE2026/movement/: README.md  main.ino  movement.cpp  movement.h  movement.ino  pins.h
IEEE2026/testing/: README.md
(+73 files in other folders)
